syntax = "proto3";

option csharp_namespace = "CustomerService.Api";

package customer;

service CustomerGrpc {
  rpc GetCustomer (GetCustomerRequest) returns (CustomerResponse);
  rpc GetAllCustomers (GetAllCustomersRequest) returns (CustomerListResponse);
  rpc CreateCustomer (CreateCustomerRequest) returns (CustomerResponse);
  rpc UpdateCustomer (UpdateCustomerRequest) returns (CustomerResponse);
  rpc DeleteCustomer (DeleteCustomerRequest) returns (DeleteCustomerResponse);
}

message GetCustomerRequest {
  string id = 1;
}

message GetAllCustomersRequest {}

message CreateCustomerRequest {
  string name = 1;
  string email = 2;
  string phone = 3;
}

message UpdateCustomerRequest {
  string id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
}

message DeleteCustomerRequest {
  string id = 1;
}

message CustomerResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  bool active = 5;
  string created_at = 6;
  string updated_at = 7;
}

message CustomerListResponse {
  repeated CustomerResponse customers = 1;
}

message DeleteCustomerResponse {
  bool success = 1;
}